assets/base.css
/* ... */
.global-media-settings {
  border: none !important;
}

:root {
  --page-width: 100%;
}

:root {
  --page-width: 100%;
}

.product-media-container.constrain-height.media-fit-contain,
.product-media-container {
  width: 100% !important;
  aspect-ratio: 1 / 1 !important;
}

.product-media-container img {
  width: 100% !important;
  height: 100% !important;
  object-fit: contain !important;
}

.product-media-container .media {
  padding-top: 100% !important;
}

.product-media-container img {
  position: absolute !important;
  top: 0 !important;
  left: 0 !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: contain !important;
}

.card__heading a:hover,
.card-information__text a:hover,
.card__heading a {
  text-decoration: none !important;
}

@media screen and (min-width: 750px) {
  .template-page .rich-text__blocks {
    width: 50% !important;
    max-width: 50% !important;
  }
}

.template-cart .page-width {
  padding-top: 10px !important;
}

:root {
  --product-card-text-alignment: center;
}

.card__information {
  text-align: center !important;
}

@media screen and (max-width: 749px) {
  .rich-text__wrapper {
    width: 100% !important;
  }
}

.related-products .product-grid,
#shopify-section-related-products .product-grid {
  display: grid !important;
  grid-template-columns: repeat(4, 1fr) !important;
  border-top: 1px solid #000000 !important;
}

.related-products .grid__item,
#shopify-section-related-products .grid__item {
  border-right: 1px solid #000000 !important;
  border-bottom: 1px solid #000000 !important;
}

.related-products .grid__item:nth-child(4n),
#shopify-section-related-products .grid__item:nth-child(4n) {
  border-right: none !important;
}

@media screen and (max-width: 749px) {
  .related-products .product-grid,
  #shopify-section-related-products .product-grid {
    grid-template-columns: repeat(2, 1fr) !important;
  }

  .related-products .grid__item:nth-child(2n),
  #shopify-section-related-products .grid__item:nth-child(2n) {
    border-right: none !important;
  }
}

.rruga-nav__center img,
.rruga-nav__center a {
  padding-top: 5px !important;
  padding-bottom: 5px !important;
}

.related-products .related-products__heading,
#shopify-section-related-products .related-products__heading {
  padding-left: 10px !important;
}

